--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guru Ramdas Ji Kirtan Darbar 2024</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+</head> 
 <body>
     <div class="container">
         <button class="print-button" onclick="window.print()">Print Script</button>
@@ -13,9 +13,7 @@
 
         <p>ਵਾਹਿਗੁਰੂ ਜੀ ਕਾ ਖਾਲਸਾ ਵਾਹਿਗੁਰੂ ਜੀ ਕੀ ਫਤਹਿ।</p>
         <h2>ਸਵਈਆ: ਵਾਹਿਗੁਰੂ ਵਾਹਿਗੁਰੂ ਵਾਹਿਗੁਰੂ ਵਾਹਿ ਜੀਉ ॥ - Taranjot Singh</h2>
-        <p>ਹਰਿਮੰਦਰ ਸਾਹਿਬ ਵਿਖੇ ਸਵੇਰੇ ਦੇ ਪ੍ਰਕਾਸ਼ ਸਮੇਂ 'ਸਵਈਏ' ਦਾ ਪਾਠ ਬਹੁਤ ਮਹੱਤਵਪੂਰਨ ਹੈ। ਇਹ ਪਾਠ ਗੁਰੂ ਸਾਹਿਬਾਂ ਦੀ ਅਖੰਡ ਮਹਾਨਤਾ ਅਤੇ ਸਿੱਖ ਧਰਮ ਦੇ ਅਸੂਲਾਂ ਦਾ ਉਚਾਰਨ ਹੈ। ਸੱਚਖੰਡ ਸ਼੍ਰੀ ਹਰਿਮੰਦਰ ਸਾਹਿਬ ਵਿਖੇ ਸਵਈਏ ਦਾ ਪਾਠ ਇਸ ਗੱਲ ਦੀ ਯਾਦ ਦਿਲਾਉਂਦਾ ਹੈ ਕਿ ਸਿੱਖਾਂ ਲਈ ਰੂਹਾਨੀ ਸਫ਼ਰ, ਗੁਰੂਆਂ ਦੀ ਸਿੱਖਿਆ ਅਤੇ ਉਹਨਾਂ ਦੀ ਮਹਾਨਤਾ ਨੂੰ ਸਦੀਵੀ ਸਾਲਾਹਣਾ ਕਿੰਨੀ ਮਹੱਤਵਪੂਰਨ ਹੈ। ਹਰ ਸਵੇਰ, ਗੁਰਬਾਣੀ ਦੇ ਰਾਗਾਂ ਨਾਲ ਗੁਰੂ ਗ੍ਰੰਥ ਸਾਹਿਬ ਜੀ ਦੀ ਸਿੱਖਿਆ ਦਾ ਉਚਾਰਨ ਕਰਨਾ ਰੂਹਾਨੀ ਜਾਗਰਤੀ ਨੂੰ ਵਧਾਉਂਦਾ ਹੈ। ਸਵਈਏ ਗੁਰੂ ਜੀ ਦੀ ਅਨੰਤ ਬਖਸ਼ਿਸ਼, ਮਹਾਨਤਾ ਅਤੇ ਅਮਰਤਾ ਨੂੰ ਬਿਆਨ ਕਰਦੇ ਹਨ।
-
-            ਅਸੀਂ ਇਸ ਪ੍ਰੋਗਰਾਮ ਵਿੱਚ ਇਹ ਸਵਈਏ ਪੜ੍ਹ ਕੇ ਉਸੇ ਆਦਰਸ਼ ਦਾ ਪਾਲਣ ਕਰਨ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰ ਰਹੇ ਹਾਂ।</p>
+        <p>ਗੁਰੂ ਸਦਾ-ਥਿਰ ਤੇ ਸਤਿ-ਸਰੂਪ ਹਨ। ਇਹ ਸਵਈਆ ਅਕਾਲ ਪੁਰਖ ਜੀ ਦੀ ਅਚਰਜ ਮਹਾਨਤਾ, ਅਨੰਤ ਸ਼ਕਤੀ, ਕਾਲ ਦੇ ਹੁਕਮ ਦੇ ਮਾਲਕ, ਗਿਆਨ-ਧਿਆਨ ਅਤੇ ਸੱਚੀ ਅਮਰਤਾ ਨੂੰ ਬਿਆਨ ਕਰਦਾ ਹੈ। ਅੰਮ੍ਰਿਤਵੇਲੇ ਦੇ ਪਵਿੱਤਰ ਸਮੇਂ, ਸੱਚਖੰਡ ਸ਼੍ਰੀ ਹਰਿਮੰਦਰ ਸਾਹਿਬ ਵਿਖੇ 'ਸਵਈਏ' ਦੇ ਪਾਠ ਦੀ ਰਸਮ ਵਿਸ਼ੇਸ਼ ਮਹੱਤਵ ਰੱਖਦੀ ਹੈ। ਇਹ ਪਾਠ ਗੁਰੂ ਸਾਹਿਬਾਂ ਦੀ ਬੇਅੰਤ ਮਹਿਮਾ, ਅਨੰਤ ਸ਼ਕਤੀ, ਅਤੇ ਸਿੱਖ ਮਰਯਾਦਾ ਦੇ ਉਚ ਸਿਧਾਂਤਾਂ ਦਾ ਪ੍ਰਕਾਸ਼ ਹੈ। ਸਵਈਏ ਦਾ ਉਚਾਰਨ ਸਾਨੂੰ ਗੁਰੂ ਸਾਹਿਬ ਦੀ ਮਹਾਨਤਾ, ਉਨ੍ਹਾਂ ਦੀ ਰੂਹਾਨੀ ਦਾਤਾਂ ਅਤੇ ਸਿੱਖ ਜੀਵਨ ਦੀ ਉੱਚੀ ਰਾਹਦਾਰੀ ਦਾ ਸਦੀਵੀ ਯਾਦਵੰਸ਼ ਦਿਵਾਉਂਦਾ ਹੈ। ਅਸੀਂ ਇਸ ਕੀਰਤਨ ਦਰਬਾਰ ਵਿੱਚ ਇਹ ਸਵਈਏ ਪੜ੍ਹ ਕੇ ਉਸੇ ਪਵਿੱਤਰ ਅਵਸਰ ਦੀ ਯਾਦ ਅਤੇ ਆਦਰ ਨੂੰ ਨਿਭਾਉਣ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰ ਰਹੇ ਹਾਂ।</p>
 
         <h2>ਅਗਲਾ ਸ਼ਬਦ: "ਵਾਹਗੁਰੂ ਤੇਰਾ ਸਭੁ ਸਦਕਾ"</h2>
         <p><b>ਸ਼ਬਦ ਕਰਨ ਵਾਲੇ ਵਿਦਿਆਰਥੀ:</b> Erleen K, Eknoor K, Harman K, Tejjas S <b>Tabla:</b> Harian S</p>
@@ -25,8 +23,8 @@
 
         <hr>
 
-        <h2>ਸਵਈਆ: ਰਾਮ ਨਾਮ ਪਰਮ ਧਾਮ ਸੁਧ ਬੁਧ ਨਿਰੀਕਾਰ... - Sukhman Singh</h2>
-        <p>ਇਹ ਸਵਈਆ ਗੁਰੂ ਜੀ ਦੀ ਅਨੰਤ ਅਤੇ ਅਦਿੱਠ ਮਹਾਨਤਾ ਬਿਆਨ ਕਰਦਾ ਹੈ। ਗੁਰੂ ਦੀ ਮਿਹਰ ਬੇਅੰਤ ਹੈ ਅਤੇ ਉਨ੍ਹਾਂ ਦਾ ਸੱਚ ਕਦੇ ਪੂਰੀ ਤਰ੍ਹਾਂ ਸਮਝਿਆ ਨਹੀਂ ਜਾ ਸਕਦਾ। ਉਹਨਾਂ ਦੀ ਸ਼ਕਤੀ ਅਨਾਦੀ ਹੈ, ਜਿਸਦਾ ਅਰੰਭ ਅਤੇ ਅੰਤ ਕੋਈ ਜਾਣ ਨਹੀਂ ਸਕਦਾ।</p>
+        <h2>ਸਵਈਆ: ਰਾਮ ਨਾਮ ਪਰਮ ਧਾਮ ਸੁਧ ਬੁਧ ਨਿਰੀਕਾਰ ਬੇਸੁਮਾਰ ਸਰਬਰ ਕਉ ਕਾਹਿ ਜੀਉ ॥ - Sukhman Singh</h2>
+        <p>ਇਹ ਸਵਈਆ ਅਕਾਲ ਪੁਰਖ ਦੇ ਅਸਚਰਜ ਸਰੂਪ, ਬੇਅੰਤ ਸ਼ਕਤੀ, ਅਤੇ ਨਿਰਲੇਪਤਾ ਨੂੰ ਪ੍ਰਗਟਾਉਂਦਾ ਹੈ। ਗੁਰੂ ਜੀ ਸਦਾ ਕਾਇਮ ਰਹਿਣ ਵਾਲੇ, ਸੱਚੇ ਅਤੇ ਅਕਾਰ-ਰਹਿਤ ਹਨ, ਜਿਨ੍ਹਾਂ ਦਾ ਕੋਈ ਸਦਰਿਸ਼ ਨਹੀਂ ਹੈ। ਗੁਰੂ ਦੀ ਮਹਾਨਤਾ ਬੇਅੰਤ ਹੈ ਅਤੇ ਉਹੀ ਸੱਚੇ ਧਾਮ ਦਾ ਟਿਕਾਣਾ ਹਨ।</p>
 
         <h2>ਅਗਲਾ ਸ਼ਬਦ: "ਸ੍ਰੀ ਗੁਰ ਰਾਮਦਾਸ ਜਯੋ ਜਯ ਜਗ ਮਹਿ"</h2>
         <p><b>ਸ਼ਬਦ ਕਰਨ ਵਾਲੇ ਵਿਦਿਆਰਥੀ:</b> Gursharan S, Gurpreet K, Varkha K, Liya K <b>Tabla:</b> Ishwar S, Ardas S</p>
@@ -36,8 +34,8 @@
 
         <hr>
 
-        <h2>ਸਵਈਆ: ਜਾਮਿ ਗੁਰੂ ਹੋਇ ਵਲਿ ਧਨਹਿ ਕਿਆ ਗਾਰਵੁ ਦਿਜਇ ॥ - Arshdeep Singh</h2>
-        <p>ਇਹ ਸਵਈਆ ਦੱਸਦਾ ਹੈ ਕਿ ਜਿਸ ਨੂੰ ਗੁਰੂ ਦਾ ਸਹਾਰਾ ਹੈ, ਉਸ ਨੂੰ ਕਿਸੇ ਹੋਰ ਮਾਨ ਜਾਂ ਅਹੰਕਾਰ ਦੀ ਲੋੜ ਨਹੀਂ ਹੁੰਦੀ। ਗੁਰੂ ਦੀ ਸ਼ਰਨ ਵਿੱਚ ਆਉਣ ਵਾਲੇ ਸਾਰੇ ਸੰਕਟ ਦੂਰ ਹੋ ਜਾਂਦੇ ਹਨ।</p>
+        <h2>ਸਵਈਆ: ਜਾਮਿ ਗੁਰੂ ਹੋਇ ਵਲਿ ਧਨਹਿ ਕਿਆ ਗਾਰਵੁ ਦਿਜਇ - Arshdeep Singh</h2>
+        <p>ਇਹ ਸਵਈਆ ਗੁਰੂ ਦੀ ਅਪਾਰ ਕਿਰਪਾ ਦੇ ਪ੍ਰਭਾਵ ਦੀ ਵਿਆਖਿਆ ਕਰਦਾ ਹੈ। ਜਦੋਂ ਗੁਰੂ ਜੀ ਪੱਖ ਕਰਨ, ਅਹੰਕਾਰ ਮਿਟ ਜਾਂਦਾ ਹੈ, ਦੁਨੀਆ ਦੀਆਂ ਲੱਖਾਂ ਤਾਕਤਾਂ ਨਿਕੰਮੀਆਂ ਬਣ ਜਾਂਦੀਆਂ ਹਨ, ਅਤੇ ਮਨੁੱਖ ਸੱਚੇ ਨਾਮ ਵਿਚ ਅਡੋਲ ਹੋ ਜਾਂਦਾ ਹੈ। ਜੋ ਗੁਰੂ ਦਾ ਨਾਮ ਹਿਰਦੇ ਵਿਚ ਵਸਾਂਦਾ ਹੈ, ਉਹ ਜਨਮ ਮਰਨ ਦੇ ਚੱਕਰ ਤੋਂ ਹਮੇਸ਼ਾ ਲਈ ਮੁਕਤ ਹੋ ਜਾਂਦਾ ਹੈ।</p>
 
         <h2>ਅਗਲਾ ਸ਼ਬਦ: "ਅਬ ਗੁਰ ਰਾਮਦਾਸ ਕਉ ਮਿਲੀ ਬਡਾਈ"</h2>
         <p><b>ਸ਼ਬਦ ਕਰਨ ਵਾਲੇ ਵਿਦਿਆਰਥੀ:</b> Miherleen K, Kirat K, Tript K, Amol K <b>Tabla:</b> Sehaj S</p>
@@ -48,7 +46,7 @@
         <hr>
 
         <h2>ਸਵਈਆ: ਅਗਮੁ ਅਨੰਤੁ ਅਨਾਦਿ ਆਦਿ ਜਿਸੁ ਕੋਇ ਨ ਜਾਣੈ ॥ - Gurpinder Singh</h2>
-        <p>ਇਹ ਸਵਈਆ ਗੁਰੂ ਸਾਹਿਬ ਦੇ ਸੁੰਦਰ ਰੂਪ ਅਤੇ ਬੇਮਿਸਾਲ ਮੌਜੂਦਗੀ ਦਾ ਬਿਆਨ ਕਰਦਾ ਹੈ। ਇਸ ਵਿੱਚ ਗੁਰੂ ਜੀ ਦੀ ਆਤਮਿਕ ਸ਼ਕਤੀ ਅਤੇ ਪਿਆਰੇ ਸਵਰੂਪ ਦਾ ਵਰਣਨ ਕੀਤਾ ਗਿਆ ਹੈ, ਜੋ ਹਮੇਸ਼ਾ ਸਦਾ ਬ੍ਰਹਮਗਿਆਨ ਨਾਲ ਪਰਿਪੂਰਨ ਰਹਿੰਦੇ ਹਨ।</p>
+        <p>ਇਹ ਸਵਈਆ ਅਕਾਲ ਪੁਰਖ ਦੀ ਅਨੁਪਮ ਮਹਾਨਤਾ, ਜੋ ਅਪਹੁੰਚ ਅਤੇ ਅਨੰਤ ਹੈ, ਦਾ ਪ੍ਰਗਟਾਵਾ ਕਰਦਾ ਹੈ। ਜਿਸ ਦਾ ਜਨਮ ਜਾਂ ਅੰਤ ਕੋਈ ਨਹੀਂ ਜਾਣ ਸਕਦਾ, ਜਿਸਦਾ ਧਿਆਨ ਸ਼ਿਵ ਤੇ ਬ੍ਰਹਮਾ ਕਰਦੇ ਹਨ, ਅਤੇ ਵੇਦ ਉਸਦੀ ਬੇਅੰਤ ਸੋਭਾ ਗਾਉਂਦੇ ਹਨ। ਉਹੀ ਸੱਚਾ ਨਾਮ ਵਾਲਾ ਕਰਤਾ ਪੁਰਖ, ਸਦਾ ਗੁਰੂ ਰਾਮਦਾਸ ਜੀ ਦੇ ਰੂਹਾਨੀ ਰੂਪ ਵਿੱਚ ਪ੍ਰਗਟ ਹੁੰਦਾ ਹੈ। ਨਿਰਵੈਰ, ਨਿਰਾਕਾਰ ਅਤੇ ਸਭ ਕੁਝ ਪੈਦਾ ਕਰਨ ਵਾਲਾ ਪ੍ਰਭੂ, ਜੀਵਾਂ ਨੂੰ ਸੰਸਾਰ ਦੇ ਦੁੱਖਾਂ ਤੋਂ ਪਾਰ ਲੈ ਜਾਣ ਵਾਲਾ ਹੈ।</p>
         
         <h2>ਅਗਲਾ ਸ਼ਬਦ: "ਗੁਰ ਰਾਮਦਾਸ ਰਾਖਹੁ ਸਰਣਾਈ"</h2>
         <p><b>ਸ਼ਬਦ ਕਰਨ ਵਾਲੇ ਵਿਦਿਆਰਥੀ:</b> Sophia K, Rameet K, Gurpreet K, Gurveen K <b>Tabla:</b> Sahib S</p>
@@ -59,7 +57,7 @@
         <hr>
 
         <h2>ਸਵਈਆ: ਪੀਤ ਬਸਨ ਕੁੰਦ ਦਸਨ ਪ੍ਰਿਅ ਸਹਿਤ... - Sehaj Singh</h2>
-        <p>ਇਹ ਸਵਈਆ ਰਾਮ ਨਾਮ ਦੀ ਮਹਾਨਤਾ ਬਿਆਨ ਕਰਦਾ ਹੈ। ਰਾਮ ਨਾਮ ਹੀ ਪਰਮ ਧਾਮ ਹੈ, ਜੋ ਸਾਰੇ ਮਾਨਸਿਕ ਭਰਮਾਂ ਨੂੰ ਦੂਰ ਕਰਦਾ ਹੈ ਅਤੇ ਬ੍ਰਹਮ ਗਿਆਨ ਦਵਾਰਾ ਨਿਰਲੇਪ ਅਤੇ ਬੇਅੰਤ ਪ੍ਰਭੂ ਦੀ ਪ੍ਰਾਪਤੀ ਕਰਦਾ ਹੈ।</p>
+        <p>ਇਹ ਸਵਈਆ ਗੁਰੂ ਦੇ ਅਨੰਤ ਰੂਪ ਅਤੇ ਮਹਾਨਤਾ ਨੂੰ ਪ੍ਰਗਟ ਕਰਦਾ ਹੈ। ਗੁਰੂ ਜੀ, ਜੋ ਧਰਮ ਦਾ ਸਰੂਪ ਹਨ, ਅਲੱਖ ਤੇ ਅਗੰਮ ਹਨ। ਗੁਰੂ ਸੱਚੇ, ਸਦਾ-ਥਿਰ ਅਤੇ ਸਾਰੇ ਸੰਸਾਰ ਦੇ ਆਦਿ ਪੁਰਖ ਹਨ। ਉਹ ਅਕਾਲ ਪੁਰਖ ਨੇ ਆਪਣੀ ਅਪਾਰ ਸ਼ਕਤੀ ਨਾਲ ਸ੍ਰਿਸ਼ਟੀ ਦੀ ਖੇਡ ਰਚੀ ਹੈ ਅਤੇ ਆਪ ਹੀ ਵਿਆਪਕ ਹਨ।</p>
 
         <h2>ਅਗਲਾ ਸ਼ਬਦ: "ਸਮਰਥ ਗੁਰੂ ਸਿਰਿ ਹਥੁ ਧਰ੍ਉ"</h2>
         <p><b>ਸ਼ਬਦ ਕਰਨ ਵਾਲੇ ਵਿਦਿਆਰਥੀ:</b> Ekam K, Jupjeet K, Jaap K, Anand K <b>Tabla:</b> Hargun S</p>
@@ -70,7 +68,7 @@
         <hr>
 
         <h2>ਸਵਈਆ: ਸਿਰੀ ਗੁਰੂ ਸਿਰੀ ਗੁਰੂ ਸਿਰੀ ਗੁਰੂ ਸਤਿ ਜੀਉ ॥ - Jaskaran Singh</h2>
-        <p>ਇਹ ਸਵਈਆ ਗੁਰੂ ਸਾਹਿਬ ਦੀ ਬੇਅੰਤ ਬਖਸ਼ਿਸ਼ ਅਤੇ ਵਾਹਿਗੁਰੂ ਦੇ ਸਿਮਰਨ ਨੂੰ ਬਿਆਨ ਕਰਦਾ ਹੈ। ਵਾਹਿਗੁਰੂ ਸਿਮਰਨ ਸਾਡੇ ਰੂਹਾਨੀ ਜਾਗਰਣ ਲਈ ਸਭ ਤੋਂ ਵੱਡਾ ਸਾਧਨ ਹੈ।</p>
+        <p>ਇਹ ਸਵਈਆ ਸਤਿਗੁਰੂ ਦੀ ਸਦਾ-ਥਿਰ ਅਡੋਲ ਮਹਾਨਤਾ ਨੂੰ ਪ੍ਰਗਟ ਕਰਦਾ ਹੈ। ਸਤਿਗੁਰੂ ਦੇ ਬਚਨ ਸਿਰਮੌਰ ਖ਼ਜ਼ਾਨਾ ਹਨ, ਜੋ ਮਨੁੱਖ ਨੂੰ ਉੱਚੀ ਆਤਮਕ ਅਵਸਥਾ 'ਤੇ ਪਹੁੰਚਾਉਂਦੇ ਹਨ। ਸਤ, ਸੰਤੋਖ ਅਤੇ ਸੱਚਾ ਸੁਖ ਸਤਿਗੁਰੂ ਦੇ ਚਰਨਾਂ ਵਿਚ ਟਿਕ ਕੇ ਹੀ ਮਿਲਦਾ ਹੈ, ਜਿੱਥੇ ਮਨ ਵਿਕਾਰਾਂ ਤੋਂ ਰਹਿਤ ਹੋ ਜਾਂਦਾ ਹੈ।</p>
 
         <h2>ਅਗਲਾ ਸ਼ਬਦ: "ਭਾਈ ਰੇ ਮਿਲਿ ਸਜਣ ਹਰਿ ਗੁਣ ਸਾਰਿ"</h2>
         <p><b>ਸ਼ਬਦ ਕਰਨ ਵਾਲੇ ਵਿਦਿਆਰਥੀ:</b> Hargun S, Taranjot S, Gurpinder S, Sehaj S, Arshdeep S, Sukhman S <b>Tabla:</b> Gurnoor S</p>
